# MediaFeeder

./: .dockerignore  .editorconfig  .gitignore  .gitleaksignore  .mega-linter.yml  Dockerfile  Dockerfile.API  Dockerfile.Web  MediaFeeder.sln  MediaFeeder.sln.DotSettings  downloadServer.proto  flake.nix  nginx.conf  renovate.json  stylelint.config.js
MediaFeeder/: AppJwtBearerEvents.cs  Dockerfile  IProvider.cs  MediaFeeder.csproj  Program.cs  _Imports.razor  appsettings.json  packages.lock.json
MediaFeeder.API/: API.http  Dockerfile  IProvider.cs  MediaFeeder.API.csproj  MediaFeederDataContext.cs  Program.cs  appsettings.Development.json  appsettings.json
MediaFeeder.DTOs/: MediaFeeder.DTOs.csproj  ShowOnlyDownloaded.cs  ShowOnlyWatched.cs  SortOrder.cs
MediaFeeder.Web/: FolderApiClient.cs  MediaFeeder.Web.csproj  MediaFeederAuthorizationMessageHandler.cs  Program.cs  Provider.cs  SubscriptionApiClient.cs  _Imports.razor
Might be useful/: MediaFeeder.API.csproj  MediaFeeder.DTOs.csproj  MediaFeeder.Web.csproj  (+1 more)
YTDownloader/: Dockerfile  downloadServer.proto  main.py  pyproject.toml
scripts/: .envrc  .gitignore  .ruff.toml  add-subscription.py  add_subscription.py  appsettings.yaml.template  atv_shuffle.py  auth.py  chromecast_bridge.py  chromecast_discover.py  chromecast_play.py  common.py  config_file.py  default.nix  devenv.nix  flake.nix  get-stars.py  get_stars.py  history-import.py  history_import.py  lounge_bridge.py  lounge_play.py  lounge_setup.py  lounge_shuffle.py  pyproject.toml  vidfile_shuffle.py  youtube_play.py  youtube_shuffle.py
(+592 files in other folders)
