[project]
name = "ytdownloader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "grpcio-tools>=1.70.0",
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",
    "yt-dlp>=2025.4.30",
    "grpcio-reflection>=1.70.0",
]


[tool.pyright]
strict = "**/*"
reportMissingImports = false
