[project]
name = "streamdeck"
version = "0.1.0"
description = ""
authors = [
    {name = "Foxocube"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pychromecast (>=14.0.7,<15.0.0)",
    "pyatv (>=0.16.0,<0.17.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "streamdeck",
    "pillow",
    "humanize"
]

[tool.hatch.build.hooks.protobuf]
proto_paths = ["../MediaFeeder/MediaFeeder/Services"]
output_path = "api"
dependencies = ["hatch-protobuf"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
